--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -61,10 +61,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.853" />
+        app:layout_constraintVertical_bias="0.897" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnRealizarPedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Realizar Pedido"
@@ -73,7 +73,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.584" />
+        app:layout_constraintVertical_bias="0.588" />
 
     <Button
         android:id="@+id/button4"
@@ -85,10 +85,10 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.674" />
+        app:layout_constraintVertical_bias="0.693" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnDisponible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Disponible"
@@ -96,7 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765" />
+        app:layout_constraintVertical_bias="0.806" />
 
     <RatingBar
         android:id="@+id/ratingBar2"
@@ -107,6 +107,6 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.946" />
+        app:layout_constraintVertical_bias="0.976" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
