--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -76,7 +76,7 @@
         app:layout_constraintVertical_bias="0.588" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnVerSucursales"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ver Sucursales"
@@ -96,7 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.806" />
+        app:layout_constraintVertical_bias="0.805" />
 
     <RatingBar
         android:id="@+id/ratingBar2"
