--- a/app/src/main/res/layout/activity_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido.xml
@@ -169,17 +169,17 @@
             android:text="Agregar Pedido"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.181"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/btnEditarPedido"
+            android:id="@+id/btnVerOEditarPedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Editar Pedido"
+            android:text="Ver O Editar Pedido"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.829"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.993" />
