--- a/app/src/main/res/layout/activity_editar_pedido.xml
+++ b/app/src/main/res/layout/activity_editar_pedido.xml
@@ -9,8 +9,8 @@
 
     <CheckBox
         android:id="@+id/editarSalsaTeriyaki"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="121dp"
+        android:layout_height="52dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="548dp"
         android:text="Salsa Teriyaki"
@@ -111,17 +111,16 @@
         android:id="@+id/textView27"
         android:layout_width="292dp"
         android:layout_height="42dp"
-        android:layout_marginTop="288dp"
         android:gravity="center"
         android:text="Edita Tu Pedido"
         android:textSize="22dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.013" />
+        app:layout_constraintVertical_bias="0.432" />
 
     <ImageView
         android:id="@+id/imageView5"
