--- a/app/src/main/res/layout/activity_editar_pedido.xml
+++ b/app/src/main/res/layout/activity_editar_pedido.xml
@@ -132,7 +132,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.129"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/editarpedido" />
 
     <TextView
         android:id="@+id/textView9"
