--- a/app/src/main/res/layout/activity_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido.xml
@@ -180,7 +180,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.142"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/realizarpedido" />
 
         <Button
             android:id="@+id/btnVolverRealizarPedido"
