--- a/app/src/main/res/layout/activity_ver_sucursales.xml
+++ b/app/src/main/res/layout/activity_ver_sucursales.xml
@@ -8,12 +8,15 @@
     tools:context=".activityVerSucursales">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.649"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="355dp">
+        tools:layout_editor_absoluteX="-9dp">
 
         <ImageView
             android:id="@+id/imageView10"
@@ -101,12 +104,15 @@
         app:layout_constraintVertical_bias="0.866" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.261"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="127dp">
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
             android:id="@+id/imageView8"
