--- a/app/src/main/res/layout/activity_crear_usuario.xml
+++ b/app/src/main/res/layout/activity_crear_usuario.xml
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.239"
-        app:srcCompat="@drawable/registrarusuario" />
+        app:srcCompat="@drawable/crearusuario" />
 
     <TextView
         android:id="@+id/textView26"
